--- a/TrendyolClone/src/styles/Product.css
+++ b/TrendyolClone/src/styles/Product.css
@@ -1,31 +1,78 @@
-.productList {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-}
-
-.productItem {
-    border: 1px solid lightgray;
-    border-radius: 10px;
+.productItem.popularItem {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 5px;
+    border: 1px solid lightgray;
+    border-radius: 6px;
+    position: relative;
+    cursor: pointer;
 }
 
-.productImage {
-    width: 240px;
-    height: 347px;
-    margin-top: 5px;
+.productImage.popularItem {
+    width: 218px;
+    height: 222px;
+    padding: 8px 16px;
+
 }
 
-.productTitle {
-    font-weight: 900;
-    padding: 0 10px;
+.productTop {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
 }
 
-.productPrice {
+.cargo {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #535353;
+    color: white;
+    position: absolute;
+    z-index: 1;
+    width: 90px;
+    left: 10px;
+    height: 30px;
+    border-radius: 2px;
+    top: 6px;
+    gap: 10px;
+    padding: 10px;
+}
+
+.cargoText {
+    font-size: 11px;
+}
+
+.favorite {
+    position: absolute;
+    right: 20px;
+    top: 5px;
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.productFavoriteIcon {
+    width: 20px;
+    height: 20px;
+}
+
+.favorite:hover .productFavoriteIcon {
     color: #f27b1f;
-    font-weight: 900;
+}
+
+.productTitle.popularItem {
+    font-size: 14px;
+    font-weight: 600;
     padding: 5px 10px;
+}
+
+.productPrice.popularItem {
+    color: #f27b1f;
+    font-weight: 600;
+    padding: 5px 10px;
+    font-size: 12px;
 }
