--- a/TrendyolClone/src/styles/Detail.css
+++ b/TrendyolClone/src/styles/Detail.css
@@ -21,7 +21,7 @@
 .productInfo {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 36px;
     width: 40%;
 }
 
@@ -59,6 +59,10 @@
     font-size: 14px;
 }
 
+.selectedColor {
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+}
+
 .sizesContainer,
 .colorsContainer {
     display: flex;
@@ -90,6 +94,10 @@
     height: 40px;
 }
 
+.selectedSize {
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
+}
+
 .price {
     font-size: 20px;
     border: 1px solid #f27b1f;
@@ -110,8 +118,10 @@
 .infoBottom {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
+    position: relative;
 }
+
 
 .basketAddButton {
     display: flex;
@@ -125,6 +135,7 @@
     font-size: 16px;
     border-radius: 6px;
     cursor: pointer;
+    transition: 300ms all;
 }
 
 .basketAddButton:hover {
@@ -193,4 +204,21 @@
 .detailCouponIcon {
     width: 20px;
     height: 20px;
+
+}
+
+
+.customPopup {
+    display: flex;
+    position: absolute;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 6px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    bottom: 55px;
+    border: none;
+    background-color: #f27b1f;
+    color: #fff;
 }
